[B]1.3.2[/B]
Fix OK button with dialog confirm.

[B]1.3.1[/B]
Many fixes.

[B]1.3.0[/B]
Fix on music infos.

[B]1.2.9[/B]
Changes in necessary addons in skin settings.
Change duration format on widgets.

[B]1.2.8[/B]
Add possibility to hide next aired infos on tvshows library.

[B]1.2.7[/B]
Fix views names.
Add stuff at Christmas.

[B]1.2.6[/B]
Fix for music visualisation always stay.

[B]1.2.5[/B]
Add Big Banner view.
Add duration on widgets.
Fix Movies Widget Hub.
Replace unwatched indicator.

[B]1.2.4[/B]
Add Big Fanarts view.

[B]1.2.3[/B]
Add fanarts support for Next Aired addon.
Add season and episode number for next aired widget.

[B]1.2.2[/B]
Add cycle view.

[B]1.2.1[/B]
Add persistent widgets.
Fix basic list.
Fix header not disappear on password popup.

[B]1.2.0[/B]
Add possibility to show indicators of watched, unwatched, in progress and new videos with widget infos.
Add possibility to show total number, unwatched number and watched number of episodes for TV shows and seasons.
Add new Keyboard.
Add autocompletion Keyboard (need plugin.program.autocompletion addon).
Changes in numeric keyboard.
Changes in Select, Browse and Profiles dialogs.
Add auto size buttons on addons dialog infos.
Tweak how cast lists etc are handled in videoinfo / extended info.
Fix home menu with color for each tiles.
Fix extended info video list views for new version.
Fix dbid lookup in extendedinfo.
Fix slide animation on home menu.
Fix thumbs on episodes.
Fix AM/PM not disappear on powermenu.
Krypton : Changes infolabels on addons infos.
Krypton : Add new default icons for addons browser root.

[B]1.1.2[/B]
Add possibility to show widget posters to be Always/Never/On Up for each menu item.
Add possibility to hide header tile.
Rollback with widgets playlists.
Fix thumbs on episodes with info list 2.
Fix playback previous item on weather widget (Thanks rhodges).
Changes in home widgets.

[B]1.1.1[/B]
Add possibility to choose, photo, video or musique for splash screen.