@@ -1,5 +1,6 @@
 [B]1.3.2[/B]
 Fix OK button with dialog confirm.
+Add possibility to show all indicators / Hide unwatched indicators only / Hide all indicators in library settings.
 
 [B]1.3.1[/B]
 Many fixes.
